<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">视力测查</string>
    <string name="action_settings">设置</string>
    
    <string name="kexue">科学原理</string>
    <string name="kexue_text">色盲是指无法正确感知部分或全部颜色间区分的缺陷。色盲检查图是根据假同色原理设计的检查方法</string>
    <string name="jinshi_text">近视眼主要检测阅读文字的视力，如果你的近视力偏低，可能是偏高度的近视或远视、花眼造成的</string>
    <string name="rouhe">如何测试</string>
    <string name="rouhe_text">将手机放于观看舒适的位置，观察屏幕上出现的图案，并根据你看到内容作出正确答案。</string>
    <string name="rouhe_jinshi">将手机放于距眼睛25cm左右的位置，观察屏幕上E的方向并选择下面的按钮或往同方向滑动屏幕；左右眼交替测试</string>
    <string name="ctime">测试时间</string>
    <string name="ctime_text">约1分钟</string>
    <string name="ctime_two">约2分钟</string>
    <string name="test">开始测试</string>
    <string name="retest">重新测试</string>
    <string name="back">返回</string>
    
    <string name="next">继续</string>
    <string name="num">请填写您所看到的数字</string>
    <string name="result">您的总得分为：</string>
    <string name="eye">您的色觉辨认力：</string>
    
    <string name="left">左眼：</string>
    <string name="right">右眼：</string>
    <string name="fensu">分数：</string>
    <string name="jiang">结果：</string>
    <string name="clean">清空</string>
    <string name="export">导出</string>
    <string name="share">分享</string>
    <string name="nojilu">暂无记录，请返回测试！</string>
    <string name="longd">长按记录删除</string>
    
    <string name="lefteye">1.捂住你的右眼，开始测试右眼视力</string>
    <string name="righteye">2.捂住你的左眼，开始测试右眼视力</string>
    <string name="lefttest">测试左眼</string>
    <string name="righttest">测试右眼</string>
    
    <string name="str_ref_value">参考值</string>
    <string name="str_eye_guard">标准视力表</string>
    <string name="str_test_result">您的视力测试结果：</string>
    <string name="mails">请输入收件人邮箱</string>
    <string name="nick">请输入您的名字</string>
    <string name="yes">发送</string>
    <string name="no">不用</string>
    
    <string name="info">"检测眼睛：
1，提供了科学专业的手机检测办法，从视力到色觉（色盲）检测，简单速度手持测试！
2，配搭了眼保健操的图文介绍和广播音乐，每天坚持做一次，让视力保持健康！
3，请保持测试距离大概在25cm左右！"</string>

    <string name="version">当前版本：V</string>
    <string name="about">技术支持：hmail520@tom.com</string>

    <string name="text_yanbao_yinyue">"马上进行眼保健操：
点击右边的播放按钮开始进行(三分钟)"</string>
    <string name="yanbaojiancao1">北京版新眼保健操图解：</string>
    <string name="yanbaojiancaostep1">"第一节：按揉攒竹穴
用双手大拇指螺纹面分别按在两侧穴位上，其余手指自然放松，指尖抵在前额上。有节奏的按揉穴位；"</string>
    <string name="yanbaojiancaostep2">"第二节：按压晴明穴
用双手食指纹面分别按在两侧穴位上，其余手指自然放松，握起，呈空心拳状。有节奏地上下按压穴位；"</string>
    <string name="yanbaojiancaostep3">"第三节：按揉四白穴
用双手食指纹面分别按在两侧穴位上，大拇指抵在下颌凹陷处，其余手指自然放松，握起，呈空心拳状。有节奏地上下按揉穴位；"</string>
    <string name="yanbaojiancaostep4">"第四节：按揉太阳穴，刮上眼眶
用双手大拇指螺纹面分别按在两侧太阳穴上，其余手指自然放松，弯曲。先用大拇指按揉太阳穴，每次一圈，揉四圈。然后，大拇指不动，用双手食指的第二个关节内侧，稍加用力从眉头刮至眉梢。连刮两次，如此交替；"</string>
    <string name="yanbaojiancaostep5">"第五节：按揉风池穴
用双手食指和中指的螺纹面分别按在两侧穴位上，其余三指自然放松，有节奏地来回按揉穴位；"</string>
    <string name="yanbaojiancaostep6">"第六节：揉捏耳垂，脚趾抓地
用双手大拇指和食指的螺纹面捏住耳垂正中的眼穴，其余三指自然并拢弯曲。用大拇指和食指有节奏地揉捏穴位，同时用双脚全部脚趾做抓地运动；"</string>
</resources>