<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".JiluActivity" >

    <include layout="@layout/toplayout" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:background="@color/gray"
            android:padding="5dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:padding="5dp"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:gravity="center_horizontal"
            android:paddingLeft="15dp"
            android:text="@string/shili"
            android:textSize="16sp" />

        <TextView
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:background="@color/gray"
            android:padding="5dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:gravity="center_horizontal"
            android:text="@string/bianse"
            android:textSize="16sp" />

        <TextView
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:background="@color/gray"
            android:padding="5dp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:background="@color/gray" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:text="@string/time" />

        <TextView
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:background="@color/gray" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/left" />

        <TextView
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:background="@color/gray" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/right" />

        <TextView
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:background="@color/gray" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/fensu" />

        <TextView
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:background="@color/gray" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:text="@string/jiang" />

        <TextView
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:background="@color/gray" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray" />

    <ListView
        android:id="@+id/jilu_listview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/details_color"
        android:cacheColorHint="#00000000"
        android:divider="@null" >
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_clean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/back_button"
            android:text="@string/clean"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:background="@drawable/back_button"
            android:text="@string/share"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button_export"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:background="@drawable/back_button"
            android:text="@string/export"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>